# mini.cmake

./: CMakeLists.txt  config.cmake.in
.github/workflows/: test.yaml
src/: mini.string.cmake  mini.utils.cmake
tests/: CMakeLists.txt  test_find_package.cmake  test_mini.string.cmake  testing.cmake
